[WOOR-37] test: 게시글 생성 API 테스트 케이스 수정